RESOLVED FIXED135959
Service overlays stay fixed when <iframe> scrolls
https://bugs.webkit.org/show_bug.cgi?id=135959
Summary Service overlays stay fixed when <iframe> scrolls
Tim Horton
Reported 2014-08-14 15:45:29 PDT
Attachments
patch (14.65 KB, patch)
2014-08-14 15:47 PDT, Tim Horton
no flags
patch (14.65 KB, patch)
2014-08-14 15:49 PDT, Tim Horton
enrica: review+
tiny followup (1.39 KB, patch)
2014-08-15 12:05 PDT, Tim Horton
enrica: review+
Tim Horton
Comment 1 2014-08-14 15:47:03 PDT
Tim Horton
Comment 2 2014-08-14 15:49:30 PDT
Tim Horton
Comment 3 2014-08-14 15:56:58 PDT
Needs a little more iteration.
Tim Horton
Comment 4 2014-08-14 16:07:23 PDT
Comment on attachment 236633 [details] patch The thing I found is not a regression from this patch.
Enrica Casucci
Comment 5 2014-08-15 11:46:36 PDT
Comment on attachment 236633 [details] patch Looks good!
Tim Horton
Comment 6 2014-08-15 11:49:06 PDT
Tim Horton
Comment 7 2014-08-15 12:05:39 PDT
Created attachment 236664 [details] tiny followup
Enrica Casucci
Comment 8 2014-08-15 12:08:18 PDT
Comment on attachment 236664 [details] tiny followup Sure!
Tim Horton
Comment 9 2014-08-15 12:10:47 PDT
Note You need to log in before you can comment on or make changes to this bug.